AI_Platform/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-disease-ai-service
spec:
  selector:
    app: plant-disease-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
