AI_Platform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plant-disease-ai-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ai.plantdisease.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plant-disease-ai-service
            port:
              number: 80
